schematics now work

--- a/nep_fitting/reports/single_data.html
+++ b/nep_fitting/reports/single_data.html
@@ -88,7 +88,7 @@
         <div class="col-lg-8">
             <h2>Model: {{ fittype }}</h2>
             {% if img_schematic is defined %}
-            <img class="img-fluid" src="data:image/png;base64,{{ img_schematic|b64encode }}" alt="Image showing fit schematic">
+            <img class="img-fluid" src="data:image/svg+xml;base64,{{ img_schematic|b64encode }}" alt="Image showing fit schematic">
             {% else %}
             <p>INSERT SCHEMATIC HERE BY DEFINING img_schematic</p>
             {% endif %}
