removing image display and name if report is generated with profiles from multiple images

--- a/nep_fitting/reports/ensemble_test.html
+++ b/nep_fitting/reports/ensemble_test.html
@@ -2,7 +2,9 @@
 <body>
     <nav class="head">
     <h1 style="display: inline;vertical-align: middle">{{fittype}} fits </h1>
+        {% if img_data is defined %}
         <h3>for {{filename}}</h3>
+        {% endif %}
 
     </nav>
 
