bytes/str/encoding fixes for reports

--- a/nep_fitting/reports/single_data.html
+++ b/nep_fitting/reports/single_data.html
@@ -84,13 +84,13 @@
         <div class="col-lg-4">
 
             {% if img_data is defined %}
-            <img class="img-fluid" src="data:image/png;base64,{{ img_data|b64encode }}" alt="Image showing profile locations">
+            <img class="img-fluid" src="data:image/png;base64,{{ img_data }}" alt="Image showing profile locations">
             {% endif %}
         </div>
         <div class="col-lg-8">
             <h2>Model: {{ fittype }}</h2>
             {% if img_schematic is not none %}
-            <img class="img-fluid" src="data:image/svg+xml;base64,{{ img_schematic|b64encode }}" alt="Image showing fit schematic">
+            <img class="img-fluid" src="data:image/svg+xml;base64,{{ img_schematic }}" alt="Image showing fit schematic">
             {% else %}
             <p>INSERT SCHEMATIC HERE BY DEFINING img_schematic</p>
             {% endif %}
